@@ -1,31 +1,18 @@
 /*
- * Copyright (C) 2018 Open WhisperSystems
- * <p>
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- * <p>
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- * <p>
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * Copyright 2013-2020 Signal Messenger, LLC
+ * SPDX-License-Identifier: AGPL-3.0-only
  */
 package org.whispersystems.textsecuregcm.storage;
 
-import org.whispersystems.textsecuregcm.redis.LuaScript;
-import org.whispersystems.textsecuregcm.redis.ReplicatedJedisPool;
+import io.lettuce.core.ScriptOutputType;
+import io.lettuce.core.SetArgs;
+import org.whispersystems.textsecuregcm.redis.ClusterLuaScript;
+import org.whispersystems.textsecuregcm.redis.FaultTolerantRedisCluster;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-
-import redis.clients.jedis.Jedis;
 
 @SuppressWarnings("OptionalUsedAsFieldOrParameterType")
 public class AccountDatabaseCrawlerCache {
@@ -36,54 +23,46 @@ public class AccountDatabaseCrawlerCache {
 
   private static final long LAST_NUMBER_TTL_MS  = 86400_000L;
 
-  private final ReplicatedJedisPool jedisPool;
-  private final LuaScript           luaScript;
+  private final FaultTolerantRedisCluster cacheCluster;
+  private final ClusterLuaScript          unlockClusterScript;
 
-  public AccountDatabaseCrawlerCache(ReplicatedJedisPool jedisPool) throws IOException {
-    this.jedisPool = jedisPool;
-    this.luaScript = LuaScript.fromResource(jedisPool, "lua/account_database_crawler/unlock.lua");
+  public AccountDatabaseCrawlerCache(FaultTolerantRedisCluster cacheCluster) throws IOException {
+    this.cacheCluster        = cacheCluster;
+    this.unlockClusterScript = ClusterLuaScript.fromResource(cacheCluster, "lua/account_database_crawler/unlock.lua", ScriptOutputType.INTEGER);
   }
 
-  public void clearAccelerate() {
-    try (Jedis jedis = jedisPool.getWriteResource()) {
-      jedis.del(ACCELERATE_KEY);
+  public void setAccelerated(final boolean accelerated) {
+    if (accelerated) {
+      cacheCluster.useCluster(connection -> connection.sync().set(ACCELERATE_KEY, "1"));
+    } else {
+      cacheCluster.useCluster(connection -> connection.sync().del(ACCELERATE_KEY));
     }
   }
 
   public boolean isAccelerated() {
-    try (Jedis jedis = jedisPool.getWriteResource()) {
-      return "1".equals(jedis.get(ACCELERATE_KEY));
-    }
+    return "1".equals(cacheCluster.withCluster(connection -> connection.sync().get(ACCELERATE_KEY)));
   }
 
   public boolean claimActiveWork(String workerId, long ttlMs) {
-    try (Jedis jedis = jedisPool.getWriteResource()) {
-      return "OK".equals(jedis.set(ACTIVE_WORKER_KEY, workerId, "NX", "PX", ttlMs));
-    }
+    return "OK".equals(cacheCluster.withCluster(connection -> connection.sync().set(ACTIVE_WORKER_KEY, workerId, SetArgs.Builder.nx().px(ttlMs))));
   }
 
   public void releaseActiveWork(String workerId) {
-    List<byte[]> keys = Arrays.asList(ACTIVE_WORKER_KEY.getBytes());
-    List<byte[]> args = Arrays.asList(workerId.getBytes());
-    luaScript.execute(keys, args);
+    unlockClusterScript.execute(List.of(ACTIVE_WORKER_KEY), List.of(workerId));
   }
 
   public Optional<UUID> getLastUuid() {
-    try (Jedis jedis = jedisPool.getWriteResource()) {
-      String lastUuidString = jedis.get(LAST_UUID_KEY);
+    final String lastUuidString = cacheCluster.withCluster(connection -> connection.sync().get(LAST_UUID_KEY));
 
-      if (lastUuidString == null) return Optional.empty();
-      else                        return Optional.of(UUID.fromString(lastUuidString));
-    }
+    if (lastUuidString == null) return Optional.empty();
+    else                        return Optional.of(UUID.fromString(lastUuidString));
   }
 
   public void setLastUuid(Optional<UUID> lastUuid) {
-    try (Jedis jedis = jedisPool.getWriteResource()) {
-      if (lastUuid.isPresent()) {
-        jedis.psetex(LAST_UUID_KEY, LAST_NUMBER_TTL_MS, lastUuid.get().toString());
-      } else {
-        jedis.del(LAST_UUID_KEY);
-      }
+    if (lastUuid.isPresent()) {
+      cacheCluster.useCluster(connection -> connection.sync().psetex(LAST_UUID_KEY, LAST_NUMBER_TTL_MS, lastUuid.get().toString()));
+    } else {
+      cacheCluster.useCluster(connection -> connection.sync().del(LAST_UUID_KEY));
     }
   }
 
